[package]
name = "dex_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
solana-client = "3.1.6"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.6"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
